hphp/hack/test/typecheck/inout/bad_inout_decl_parent3.php.exp
File "bad_inout_decl_parent3.php", line 8, characters 27-27:
Encountered unexpected token '&'. (Parsing[1002])
File "bad_inout_decl_parent3.php", line 8, characters 19-21:
Member foo has the wrong type (Typing[4341])
File "bad_inout_decl_parent3.php", line 4, characters 33-34:
This is an inout parameter
File "bad_inout_decl_parent3.php", line 8, characters 28-29:
It is incompatible with a normal parameter
